@@ -3,6 +3,7 @@ Version 1.1.3 -- DEVELOPMENT
 - Fixed MOTD
 - Fixed multipart/alternative messages
 - Updated Dutch translation
+- Added Indonesian translation <arief (at) fisika (dot) ui (dot) ac (dot) id>
 
 Version 1.1.2 -- May 21, 2001 
 -----------------------------
